# jndi-deobfuscate-python

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/jndi_deobfuscate/: __init__.py  jndi_deobfuscate.py
tests/: test_jndi_deobfuscate.py
